--- a/views/layouts/partials/home/latest_home_blogs.handlebars
+++ b/views/layouts/partials/home/latest_home_blogs.handlebars
@@ -16,7 +16,7 @@
 								<ul class="tags">
 									<li><a href="/category_blog/{{category.id}}">{{category.title}}</a></li>
 								</ul>
-								<a href="#">
+								<a  href="/single_blog/{{slug}}">
 									<h4>{{title}}</h4>
 								</a>
 								<p>
