--- a/views/layouts/partials/home/blog_sidebar.handlebars
+++ b/views/layouts/partials/home/blog_sidebar.handlebars
@@ -14,7 +14,7 @@
 									</p>
 									<ul class="social-links">
 										<li><a href="https://facebook.com/atutechscorp"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+										<li><a href="https://linkedin.com/in/atuoha-anthony"><i class="fa fa-linkedin"></i></a></li>
 										<li><a href="https://github.com/atuoha"><i class="fa fa-github"></i></a></li>
 										<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 									</ul>
