Stripe all around utilization -admin-user-home

--- a/views/accounts/user/booking/index.handlebars
+++ b/views/accounts/user/booking/index.handlebars
@@ -35,6 +35,7 @@
            <th>Date</th>
            <th>Time</th>
            <th>Plan</th>
+           <th>Price</th>
            <th>Status</th>
            <th>Received Date</th>
            <th>Actions</th>
@@ -60,6 +61,7 @@
                     <td>{{booking_date}}</td>
                     <td>{{booking_time}}</td>
                     <td>{{plan}}</td>
+                    <td>{{price}}</td>
                     <td>{{status}}</td>
                     <td>{{generate_date date 'MMM-Do-Y'}}</td>
                     <td><a href="/user/booking/edit/{{id}}" class="btn btn-success"><i class="fa fa-pencil"></i></a></td>
