--- a/views/layouts/partials/user/footer.handlebars
+++ b/views/layouts/partials/user/footer.handlebars
@@ -5,13 +5,26 @@
         </div>
       </div>
     </footer>
-     <!-- Bootstrap core JavaScript-->
-    <script src="/vendor/jquery/jquery.min.js"></script>
+  <script src="/js/vendor/jquery-2.2.4.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
     <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin.js"></script>
     <script src="/js/bootstrap-switch.js"></script>
-    <script src="/js/sweetalert.min.js"></script>
 
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/vendor/bootstrap.min.js"></script>			
+  <script src="/js/easing.min.js"></script>			
+  <script src="/js/hoverIntent.js"></script>
+  <script src="/js/superfish.min.js"></script>	
+  <script src="/js/jquery.ajaxchimp.min.js"></script>
+  <script src="/js/jquery.magnific-popup.min.js"></script>	
+  <script src="/js/jquery.nice-select.min.js"></script>		
+  <script src="/js/bootstrap-timepicker.min.js"></script>	
+  <script src="/js/jquery-ui.js"></script>	
+  <script src="/js/sweetalert.min.js"></script>					
+  <script src="/js/main.js"></script>	
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
+
+ 
+  <script src="/js/custom.js"></script>
