--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -8,14 +8,15 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Taxi User</title>
-  <!-- Bootstrap core CSS-->
+     <link rel="stylesheet" href="/css/bootstrap.css">
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom fonts for this template-->
-  <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template-->
   <link href="/css/sb-admin.css" rel="stylesheet">
-
+  <link href="/css/custom.css" rel="stylesheet">
   <link href="/css/bootstrap-switch.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/jquery-ui.css">
+  <link rel="stylesheet" href="/css/nice-select.css">	
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
 </head>
 
