--- a/views/layouts/partials/home/top_booking.handlebars
+++ b/views/layouts/partials/home/top_booking.handlebars
@@ -18,7 +18,7 @@
 		<div class="form-section">	
 		<h4 class="pb-30">Book Your Taxi Online!</h4>
 
-{{!-- {{#if loggedUser}} --}}
+{{#if loggedUser}}
 
 			<div class="form-group">
 				<select id="from_place" required class="selectpicker select show-tick" data-width="100%" data-live-search="true" title="From Destination" data-size="4" data-header="From Destination" name="location">
@@ -92,9 +92,9 @@
 		</div>
 		
 
-{{!-- {{else}}	
+{{else}}	
 <div class="alert alert-success"><a href="/logs/sign"><i class="fa fa-sign-in"></i> Sign in</a> to book now!</div>
-{{/if}}	 --}}
+{{/if}}	
 </div>
 
 	<div class="loading">
