--- a/views/layouts/partials/home/blog_sidebar.handlebars
+++ b/views/layouts/partials/home/blog_sidebar.handlebars
@@ -1,7 +1,7 @@
-<div class="col-lg-4 sidebar-widgets">
+					
 							<div class="widget-wrap">
 								<div class="single-sidebar-widget search-widget">
-									<form class="search-form" action="#">
+									<form class="search-form" action="/search_post" method="post">
 			                            <input placeholder="Search Posts" name="search" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Posts'" >
 			                            <button type="submit"><i class="fa fa-search"></i></button>
 			                        </form>
@@ -98,4 +98,3 @@
 									</ul>
 								</div>								
 							</div>
-						</div>
