--- a/views/layouts/partials/home/blog_single.handlebars
+++ b/views/layouts/partials/home/blog_single.handlebars
@@ -56,13 +56,13 @@
 									<div class="quotes">
 										We can last for more days without wines, water or food. It could be anything but not the peace that sets the mind into visualizing a happy home							
 									</div>
+									
 									<div class="row mt-30 mb-30">
-									{{#each multi_files}}	
-										<div class="col-6">
-											<img class="img-fluid" src="/uploads/{{this}}" alt="">
+									{{#each blog.multi_files}}	
+										<div class="col-4">
+											<img class="img-fluid" width="300" src="/uploads/{{this}}" alt="">
 										</div>
-									{{/each}}	
-																			
+									{{/each}}															
 									</div>
 								</div>
 							</div>
