--- a/views/layouts/partials/home/blog_top.handlebars
+++ b/views/layouts/partials/home/blog_top.handlebars
@@ -5,11 +5,11 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content blog-header-content col-lg-12">
 							<h1 class="text-white">
-								Wow Buddies we are getting
-								a Laptop				
+								Best Blog Posts
+								without looks				
 							</h1>	
 							<p class="text-white">
-								There is a moment in the life of any aspiring developer that it is time to buy that first
+								There is a moment in the life of any aspiring developer that it is time to give in all
 							</p>
 							<a href="#blogs" class="primary-btn">View More</a>
 						</div>	
