--- a/views/layouts/partials/user/side-nav.handlebars
+++ b/views/layouts/partials/user/side-nav.handlebars
@@ -54,23 +54,12 @@
           </ul>
         </li>
 
-
-     
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Testimony">
-          <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#testimony" data-parent="#exampleAccordion">
-            <i class="fa fa-fw fa-address-book-o"></i>
+    
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Profile">
+          <a class="nav-link" href="/user/testimonies/">
+          <i class="fa fa-fw fa-address-book-o"></i>
             <span class="nav-link-text">Testimony</span>
           </a>
-          <ul class="sidenav-second-level collapse" id="testimony">
-            
-              <li>
-                <a href="/user/testimonies/">All Testimony</a>
-              </li>
-
-              <li>
-              <a href="/user/testimonies/create">Create Testimony</a>
-            </li>
-          </ul>
         </li>
      
        
