--- a/views/accounts/user/index.handlebars
+++ b/views/accounts/user/index.handlebars
@@ -1,5 +1,10 @@
 <h4>DASHBOARD</h4>
 
+{{#if loggedUser.fullname }}
+<div class="alert alert-success">Welcome on board Captain! {{loggedUser.fullname}} we follow your lead Sire</div>
+{{else}}
+<div class="alert alert-danger">No Username. Try Giving yourself one Captain!</div>
+{{/if}}
 <div class="row">
     <div class="col-md-3 ">
         <div class="card bg-primary">
